fix ios flexbox layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -188,22 +188,6 @@ nav {
 
 
 @media (min-width: 769px) {
-.main-header, .main-nav {
-  display: flex;
-}
-
-.main-header {
-  flex-direction: column;
-  align-items: center;
-}
-
-.main-nav li {
-  width: 100px;
-}
-
-}
-
-@media (min-width: 1025px) {
 
 .main-nav {
   display: flex;
